--- a/angular.json
+++ b/angular.json
@@ -22,8 +22,10 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              { "glob": "_redirects", "input": "src", "output": "/" }
             ],
+            
             "styles": [
               "src/styles.css"
             ],
