--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod && cp _redirects dist/notes",
+    "build": "ng build && cp _redirects dist/notes",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
